# ass-parser-rs

./: .gitignore  Cargo.toml  README.md  my.ass
src/: lib.rs  prelude.rs
src/document/: document.rs  mod.rs
src/parsers/: mod.rs  parse_events.rs  parse_project_garbage.rs  parse_script_info.rs  parse_v4_styles.rs
